<resources>
    <string name="app_name" translatable="false">NOTE100</string>

    <string name="context_menu_change_color">Change color</string>

    <string name="context_menu_color_yellow">YELLOW</string>
    <string name="context_menu_color_red">RED</string>
    <string name="context_menu_color_green">GREEN</string>
    <string name="context_menu_color_blue">BLUE</string>
    <string name="context_menu_color_grey">GREY</string>

    <string name="menu_sorting">Sorting</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_delete">Delete</string>
    <string name="create_note">Create note</string>
    <string name="menu_alphabetically">Sort alphabetically</string>
    <string name="menu_by_date">Sort by Date</string>
    <string name="menu_by_color">Sort by Color</string>
    <string name="menu_search">Search</string>
    <string name="dialog_context_delete_note">Delete note?</string>
    <string name="dialog_context_delete_notes">Delete notes?</string>
    <string name="dialog_context_cancel_button_text">Cancel</string>
    <string name="dialog_context_delete_button_text">Delete</string>
    <string name="sort_from_a_to_z">Sort note from A to Z</string>
    <string name="sort_from_z_to_a">Sort note from Z to A</string>
    <string name="sort_by_newest">Sort by newest</string>
    <string name="sort_by_oldest">Sort by oldest</string>
    <string name="sort_by_color">Sort by color</string>

    <!-- transition name -->
    <string name="transition_view" translatable="false">transition_view</string>
    <string name="transition_view_2" translatable="false">transition_view_2</string>
    <string name="transition_view_3" translatable="false">transition_view_3</string>
    <string name="transition_view_fab" translatable="false">transition_view_fab</string>
    <string name="empty_text">No notes!</string>
</resources>
